# cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml  test.yml
.rngo/: spec.yml
.rngo/effects/: posts.create.yml  posts.yml  users.create.yml  users.yml
.rngo/entities/: posts.yml  users.yml
.rngo/systems/: db.yml  db1.yml
script/: clean-db  release
src/: ai.rs  auth.rs  config.rs  effect.rs  effects.rs  entities.rs  infer.rs  init.rs  login.rs  logout.rs  main.rs  model.rs  sim.rs  system.rs  systems.rs  util.rs
src/sim/: api.rs  init.rs  load.rs  model.rs  problem.rs  run.rs  simulation_sink.rs  sink.rs  spec.rs
src/util/: ai.rs  config.rs  model.rs  sim.rs  spec.rs
test/: db1-schema.sql  invalid-effects.yml  invalid-entities.yml  multi.yml  single.yml
