[package]
name = "rngo"
version = "0.1.0"
edition = "2024"
authors = ["Aoife Lee <aoife@rngo.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://rngo.dev"
repository = "https://github.com/rngodev/cli"
keywords = ["cli", "data", "testing", "simulation"]
categories = ["command-line-utilities", "api-bindings", "development-tools", "simulation"]
exclude = [
    "test/*",
    ".rngo/*"
]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
config = "0.15.11"
directories = "6.0.0"
eventsource-client = "0.15.0"
futures = "0.3.31"
reqwest = { version = "0.12.19", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.45.1", features = ["full"] }
